--- a/Mobile App/Demo4.2/app/src/main/res/values/strings.xml
+++ b/Mobile App/Demo4.2/app/src/main/res/values/strings.xml
@@ -4,8 +4,8 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="input_error">không hợp lệ</string>
-    <string name="qr_error">QR Code không hợp lệ!</string>
+    <string name="input_error">Invalid</string>
+    <string name="qr_error">QR Code is invalid</string>
 
     <integer name="speed_walking">4891</integer>
 
